fix va-canvas css styling, canvas too large

--- a/src/client/vandaid/content/css/style.css
+++ b/src/client/vandaid/content/css/style.css
@@ -31,7 +31,7 @@ a:hover {
 }
 
 .collapse-bar:hover {
-    background-color: #D8D8D8;
+    background-color: rgba(128,128,128,0.3);
 }
 
 .submit-fab {
@@ -45,7 +45,7 @@ a:hover {
     background-color: #f1f1f1;
 }
 
-vandaid-canvas {
+va-canvas {
     display: block;
     position: relative;
     overflow: auto;
